--- a/src/ML_model.ipynb
+++ b/src/ML_model.ipynb
@@ -9,7 +9,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 13,
+            "execution_count": 1,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -28,7 +28,7 @@
                 "from nltk.corpus import stopwords\n",
                 "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
                 "import warnings\n",
-                "import random\n"
+                "import random"
             ]
         },
         {
@@ -40,28 +40,27 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 14,
+            "execution_count": 2,
             "metadata": {},
             "outputs": [],
             "source": [
-                "# URL del archivo CSV\n",
+                "# URL of the CSV file\n",
                 "url = \"https://raw.githubusercontent.com/4GeeksAcademy/naive-bayes-project-tutorial/main/playstore_reviews.csv\"\n",
                 "\n",
-                "# Nombre del archivo de destino\n",
-                "nombre_archivo = \"comments.csv\"\n",
+                "# Destination file name\n",
+                "file_name = \"comments.csv\"\n",
                 "\n",
-                "# Ruta completa al directorio de trabajo\n",
-                "directorio_trabajo = \"/workspaces/alfonsoMG_naive_bayes/data/raw/\"\n",
+                "# Full path to the working directory\n",
+                "working_directory = \"/workspaces/alfonsoMG_naive_bayes/data/raw/\"\n",
                 "\n",
-                "# Ruta completa al archivo CSV de destino\n",
-                "ruta_archivo = os.path.join(directorio_trabajo, nombre_archivo)\n",
+                "# Full path to the destination CSV file\n",
+                "file_path = os.path.join(working_directory, file_name)\n",
                 "\n",
-                "# Descargar el archivo CSV desde la URL\n",
+                "# Download the CSV file from the URL\n",
                 "response = requests.get(url)\n",
                 "\n",
-                "with open(ruta_archivo, 'wb') as f:\n",
-                "    f.write(response.content)\n",
-                "\n"
+                "with open(file_path, 'wb') as file:\n",
+                "    file.write(response.content)"
             ]
         },
         {
@@ -82,7 +81,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 15,
+            "execution_count": 3,
             "metadata": {},
             "outputs": [
                 {
@@ -162,22 +161,25 @@
                             "4         0  "
                         ]
                     },
-                    "execution_count": 15,
+                    "execution_count": 3,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
             ],
             "source": [
+                "# Path to the CSV file\n",
                 "csv_path = \"/workspaces/alfonsoMG_naive_bayes/data/raw/comments.csv\"\n",
                 "\n",
+                "# Read the CSV file into a pandas DataFrame\n",
                 "df = pd.read_csv(csv_path)\n",
                 "\n",
+                "# Display the first few rows of the DataFrame\n",
                 "df.head()"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 16,
+            "execution_count": 4,
             "metadata": {},
             "outputs": [
                 {
@@ -244,19 +246,22 @@
                             "4   forced reload on uploading pic on replying co...         0"
                         ]
                     },
-                    "execution_count": 16,
+                    "execution_count": 4,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
             ],
             "source": [
-                "df.drop(\"package_name\", axis = 1 , inplace = True)\n",
+                "# Drop the \"package_name\" column from the DataFrame\n",
+                "df.drop(\"package_name\", axis=1, inplace=True)\n",
+                "\n",
+                "# Display the first few rows of the modified DataFrame\n",
                 "df.head()"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 17,
+            "execution_count": 5,
             "metadata": {},
             "outputs": [
                 {
@@ -305,14 +310,19 @@
                             "Name: review, dtype: object"
                         ]
                     },
-                    "execution_count": 17,
+                    "execution_count": 5,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
             ],
             "source": [
-                "df[\"review\"] = df[\"review\"].str.lower().replace('[^\\w\\s\\']', ' ', regex=True).str.split().apply(lambda x: ' '.join(filter(lambda word: word.isalpha() and len(word) > 2, x)))\n",
-                "df[\"review\"].head(40) "
+                "# Preprocess the \"review\" column\n",
+                "df[\"review\"] = df[\"review\"].str.lower().replace('[^\\w\\s\\']', ' ', regex=True).str.split().apply(\n",
+                "    lambda x: ' '.join(filter(lambda word: word.isalpha() and len(word) > 2, x))\n",
+                ")\n",
+                "\n",
+                "# Display the preprocessed \"review\" column for the first 40 rows\n",
+                "df[\"review\"].head(40)"
             ]
         },
         {
@@ -331,7 +341,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 18,
+            "execution_count": 6,
             "metadata": {},
             "outputs": [
                 {
@@ -345,22 +355,26 @@
                             "Name: review, dtype: object"
                         ]
                     },
-                    "execution_count": 18,
+                    "execution_count": 6,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
             ],
             "source": [
+                "# Features (X) and target variable (y)\n",
                 "X = df[\"review\"]\n",
                 "y = df[\"polarity\"]\n",
                 "\n",
-                "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 24)\n",
+                "# Split the data into training and testing sets\n",
+                "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=24)\n",
+                "\n",
+                "# Display the first few rows of the training set features\n",
                 "X_train.head()"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 19,
+            "execution_count": 7,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -379,7 +393,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 20,
+            "execution_count": 8,
             "metadata": {},
             "outputs": [
                 {
@@ -392,32 +406,41 @@
                 }
             ],
             "source": [
+                "# Download the NLTK stopwords for English\n",
                 "nltk.download('stopwords')\n",
+                "\n",
+                "# Create a list of stopwords\n",
                 "stop_words = list(stopwords.words('english'))\n",
                 "\n",
-                "vec_model = CountVectorizer(stop_words = stop_words)\n",
+                "# Initialize CountVectorizer with stop_words\n",
+                "vec_model = CountVectorizer(stop_words=stop_words)\n",
+                "\n",
+                "# Convert the training set text data into a bag-of-words representation\n",
                 "X_train = vec_model.fit_transform(X_train).toarray()\n",
+                "\n",
+                "# Convert the testing set text data into a bag-of-words representation\n",
                 "X_test = vec_model.transform(X_test).toarray()"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 21,
+            "execution_count": 9,
             "metadata": {},
             "outputs": [],
             "source": [
-                "# Desactivar FutureWarnings específicos\n",
+                "# Suppress specific FutureWarnings\n",
                 "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
                 "\n",
-                "# Desactivar UserWarnings específicos\n",
+                "# Suppress specific UserWarnings\n",
                 "warnings.simplefilter(action='ignore', category=UserWarning)\n",
                 "\n",
+                "# Suppress FitFailedWarning from scikit-learn\n",
                 "warnings.filterwarnings(\"ignore\", category=sklearn.exceptions.FitFailedWarning)"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 22,
+            "execution_count": 10,
             "metadata": {},
             "outputs": [
                 {
@@ -453,24 +476,30 @@
                 "for model, name in models:\n",
                 "    model.fit(X_train, y_train)\n",
                 "    \n",
+                "    # Save the trained model to a file\n",
                 "    model_file = f\"/workspaces/alfonsoMG_naive_bayes/models/model_{name.lower()}.pk\"\n",
                 "    dump(model, open(model_file, \"wb\"))\n",
                 "\n",
+                "    # Evaluate and print training accuracy\n",
                 "    y_pred_train = model.predict(X_train)\n",
                 "    train_accuracy = accuracy_score(y_train, y_pred_train)\n",
                 "    print(f\"{name} Train Accuracy: {train_accuracy}\")\n",
                 "\n",
+                "    # Evaluate and print testing accuracy\n",
                 "    y_pred_test = model.predict(X_test)\n",
                 "    test_accuracy = accuracy_score(y_test, y_pred_test)\n",
                 "    print(f\"{name} Test Accuracy: {test_accuracy}\")\n",
                 "\n",
+                "    # Calculate and print accuracy difference\n",
                 "    accuracy_difference = abs(train_accuracy - test_accuracy)\n",
                 "    print(f\"{name} Accuracy Difference: {accuracy_difference}\\n\")\n",
                 "\n",
+                "    # Update best model information if the current model has a smaller difference\n",
                 "    if accuracy_difference < min_difference:\n",
                 "        min_difference = accuracy_difference\n",
                 "        best_model_name = name\n",
                 "\n",
+                "# Print the best model information\n",
                 "print(f\"The best model is: {best_model_name} with the smallest difference ({min_difference:.4f}) between train and test accuracy.\")"
             ]
         },
@@ -490,7 +519,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 25,
+            "execution_count": 11,
             "metadata": {},
             "outputs": [
                 {
@@ -504,31 +533,42 @@
                 }
             ],
             "source": [
+                "# Define hyperparameter grid\n",
                 "hyperparams = {\n",
-                "    \"alpha\": [0] + list(np.arange(1.0, 10, 0.1)),  # Asegurarse de que se incluya 0 y utilizar un paso más pequeño\n",
+                "    \"alpha\": [0] + list(np.arange(1.0, 10, 0.1)),  \n",
                 "    \"fit_prior\": [True, False],\n",
                 "    \"class_prior\": [None, np.arange(0.1, 1, 10)]\n",
                 "}\n",
                 "\n",
+                "# Initialize Multinomial Naive Bayes model\n",
                 "multinomial = MultinomialNB()\n",
-                "grid = GridSearchCV(multinomial, hyperparams, scoring = 'accuracy', cv = 5)\n",
+                "\n",
+                "# Perform GridSearchCV to find the best hyperparameters\n",
+                "grid = GridSearchCV(multinomial, hyperparams, scoring='accuracy', cv=5)\n",
                 "grid.fit(X_train, y_train)\n",
                 "\n",
-                "best_hyper = grid.best_params_ \n",
+                "# Get the best hyperparameters\n",
+                "best_hyper = grid.best_params_\n",
+                "\n",
+                "# Initialize the best Multinomial Naive Bayes model with the optimal hyperparameters\n",
                 "best_model = MultinomialNB(**best_hyper)\n",
                 "best_model.fit(X_train, y_train)\n",
                 "\n",
-                "y_pred = best_model.predict(X_train)\n",
-                "train_score = accuracy_score(y_train, y_pred)\n",
-                "\n",
-                "y_pred = best_model.predict(X_test)\n",
-                "test_score = accuracy_score(y_test, y_pred)\n",
-                "\n",
+                "# Evaluate and print the accuracy score for the training set\n",
+                "y_pred_train = best_model.predict(X_train)\n",
+                "train_score = accuracy_score(y_train, y_pred_train)\n",
                 "print(f\"The accuracy score for Train is : {train_score}\")\n",
+                "\n",
+                "# Evaluate and print the accuracy score for the testing set\n",
+                "y_pred_test = best_model.predict(X_test)\n",
+                "test_score = accuracy_score(y_test, y_pred_test)\n",
                 "print(f\"The accuracy score for Test is : {test_score}\")\n",
+                "\n",
+                "# Print the difference between training and testing accuracy\n",
                 "print(f\"Train/Test difference: {train_score - test_score}\")\n",
                 "\n",
-                "dump(best_model, open (f\"/workspaces/alfonsoMG_naive_bayes/models/opt_multinomial.pk\", \"wb\"))"
+                "# Save the optimized Multinomial Naive Bayes model to a file\n",
+                "dump(best_model, open(f\"/workspaces/alfonsoMG_naive_bayes/models/opt_multinomial.pk\", \"wb\"))\n"
             ]
         },
         {
@@ -547,13 +587,13 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 12,
             "metadata": {},
             "outputs": [
                 {
                     "data": {
                         "text/plain": [
-                            "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7fc2e68ddad0>"
+                            "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7f44ff84da10>"
                         ]
                     },
                     "execution_count": 12,
@@ -572,12 +612,12 @@
                 }
             ],
             "source": [
-                "# Calcular la matriz de confusión\n",
-                "cm = confusion_matrix(y_test, y_pred)\n",
+                "# Calculate the confusion matrix\n",
+                "cm = confusion_matrix(y_test, y_pred_test)\n",
                 "\n",
-                "# Visualizar la matriz de confusión\n",
+                "# Visualize the confusion matrix\n",
                 "disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=best_model.classes_)\n",
-                "disp.plot()"
+                "disp.plot()\n"
             ]
         },
         {
